# kriya-console

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SETUP.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  kriyad-release.yml
demo/: README.md  approvals-demo.mts  compliance-demo.mts  kriya-demo.tape  record-walkthrough.mjs  story-demo.sh
demo/capture/: capture-fleet.mjs  capture-shots.mjs  gen-capture-data.mjs
demo/hook-demo/: hook-demo.tape
docs/: FEATURE-PROOF.md  FEATURES.md  THREAT-MODEL-brokering.md  TRUST.md
docs/privacy/: DPIA-egress-template.md  README.md  employee-notice-template.md  works-agreement-clause.md
docs/samples/au-family-sample/: evidence.json  evidence.md
docs/samples/egress-receipt-demo/: README.md  kriya-egress-receipts.html  receipts.jsonl
docs/screenshots/: CAPTURE.md
scripts/: bump-version.sh  bundle-gateway.sh  gen-au-sample.mts  gen-egress-demo.mts  release-audit-cli.sh
scripts/icon/: render-icon.mjs
scripts/macos/: release.sh  sign-stable-identity.sh
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/: .gitkeep
src-tauri/crates/kriya-aggregator/: Cargo.toml  INSTALL.md
src-tauri/crates/kriya-aggregator/fixtures/: dev-control-plane-license.json
src-tauri/crates/kriya-aggregator/packaging/: Dockerfile  Makefile  build-image.sh
src-tauri/crates/kriya-aggregator/packaging/airgap/: INSTALL-AIRGAP.md  make-bundle.sh  verify-bundle.sh
src-tauri/crates/kriya-aggregator/packaging/box/: README.md  install.sh  kriyad.env.example  kriyad.service  make-box.sh
src-tauri/crates/kriya-aggregator/scripts/: e2e-pilot.sh  kriyd-ca.sh
src-tauri/crates/kriya-aggregator/src/: config.rs  license.rs  main.rs  peer.rs  store.rs  tls.rs
src-tauri/crates/kriya-aggregator/test-fixtures/: pilot-heartbeat.json  pilot-outbox.ndjson
src-tauri/crates/kriya-audit-cli/: Cargo.toml  README.md
src-tauri/crates/kriya-audit-cli/src/: main.rs
src-tauri/crates/kriya-verify/: Cargo.toml
src-tauri/crates/kriya-verify/fixtures/: dev-license.json  runtime-egress-ledger.jsonl
src-tauri/crates/kriya-verify/src/: canonical.rs  classify.rs  device_info.rs  envelope.rs  heartbeat.rs  lib.rs  license.rs  merkle.rs  policy.rs  receipts.rs  redact.rs  sig.rs  simulate.rs
src-tauri/icons/: icon.icns
src-tauri/scripts/: check-dormancy-build.sh
src-tauri/src/: audit.rs  control_plane.rs  coverage.rs  govern.rs  lib.rs  license.rs  main.rs  onboarding.rs  paid.rs  policy_sim.rs  receipts.rs
src-tauri/src/control_plane/: compiler.rs  device_info.rs  drilldown.rs  enrollment.rs  envelope.rs  fleet.rs  fleet_client.rs  fleet_evidence.rs  org_key.rs  outbox.rs  policy.rs  push.rs  redact.rs
src-tauri/tests/: device_e2e.rs  dormancy.rs  fleet_manual_proof.rs  govern_live_smoke.rs  p2_verification_proof.rs  p3_manual_proof.rs  p4_manual_proof.rs  p5_manual_proof.rs  positive_control.rs  redaction_manifest.rs
src/components/: AuditTable.tsx  CommandPalette.tsx  Icon.tsx  LicenseGate.tsx  Sidebar.tsx
src/demo/: capture-seed.ts  seed.ts
src/demo/capture/: capture-approvals.jsonl  capture-audit.jsonl
src/demo/fixtures/: pilot-device-pub.txt
src/lib/: approvals.ts  budget.ts  chain.ts  compliance.ts  envelope.ts  govern-view.ts  identity.ts  policy.ts  policyBundle.ts  policyDrift.ts  receipts.ts  selfverify.ts  sessionTree.ts  tauri.ts  textDiff.ts  types.ts  verify.ts
src/sample/: sample-approvals.jsonl  sample-audit-actor.jsonl  sample-audit.jsonl  sample-compliance.jsonl  sample-envelope-egress.json  sample-envelope-v1.1.json  sample-envelope-v1.2.json  sample-envelope.json  sample-org-evidence.json  sample-policy-bundle.json
src/selfverify/: runtime.ts
src/views/: ApprovalsView.tsx  AuditView.tsx  BudgetView.tsx  ComplianceView.tsx  ConnectionsView.tsx  ControlPlaneDemo.tsx  ControlPlaneDrillIn.tsx  ControlPlaneEvidenceTab.tsx  ControlPlanePolicyTab.tsx  ControlPlaneView.tsx  CoverageView.tsx  FleetView.tsx  GetStartedView.tsx  IdentityView.tsx  MonitorView.tsx  OverviewView.tsx  PolicyView.tsx  ReportsView.tsx  SessionsView.tsx  SettingsView.tsx  SetupView.tsx
test/: actor.test.ts  approvals.test.ts  au-family-sample.test.ts  budget.test.ts  compliance.test.ts  coverage-fixture.test.ts  device-info-fixture.test.ts  envelope.test.ts  govern-view.test.ts  govern.test.ts  identity.test.ts  no-sample-in-build.test.ts  orgEvidence.test.ts  p2-era-coverage-fixture.test.ts  policy-bundle.test.ts  policy.test.ts  policyDrift.test.ts  selfverify.test.ts  sessionTree.test.ts  textDiff.test.ts  verify.test.ts
test/fixtures/: coverage-sample.jsonl  governable-surface-sample.json  p2-era-coverage-sample.json  pre-p1-coverage-sample.json  s3-corr-audit.jsonl
