[package]
name = "kriya-console"
version = "0.3.1"
description = "kriya Console — on-device governance control-plane (paid tier)"
edition = "2021"
rust-version = "1.77"
publish = false
# Two binaries live here (the app + the dev `issue-license` minter); `tauri dev` runs the app.
default-run = "kriya-console"

# The Console app package is ALSO the workspace root (Open decision 2: least-disruptive to
# `tauri dev`/`tauri build`, which expect `src-tauri/Cargo.toml` to be the app). Shared and
# control-plane crates land under `crates/` and the glob picks them up as they arrive
# (kriya-verify, kriya-audit-cli, kriya-aggregator). Empty today — the root package is the sole member.
[workspace]
members = ["crates/*"]
resolver = "2"

# The compiled Rust backend is where the PAID value and the license check live (D-018): a
# downloaded app can't be lifted into a clone because the moat is this crate, not the webview JS.
[lib]
name = "kriya_console_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# The dev-only license minter is gated behind the `dev-issuer` feature so it is NOT built (and so is
# never bundled into the shipped .app) by a default `cargo build` / `tauri build`. Run it for dev with
# `cargo run --features dev-issuer --bin issue-license -- --holder "<name>"`.
[[bin]]
name = "issue-license"
path = "src/bin/issue-license.rs"
required-features = ["dev-issuer"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# The shared trust core (extracted across Phase 0): the Console links the SAME verifier the kriyad
# server and the auditor CLI use, so a verdict comes from one audited implementation, not three.
kriya-verify = { path = "crates/kriya-verify" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
# `preserve_order` keeps `serde_json::Value` maps in insertion order (indexmap-backed) instead of
# re-sorting keys alphabetically. Load-bearing for govern-all (GA-1): reading → editing → writing a
# user's real agent config must be surgical — add/remove only our own entries and leave every other
# key in its original position, so an install→revert restores the file byte-for-byte. (Signing still
# canonicalizes explicitly via kriya-verify::canonical_value, so this never affects signed bytes.)
serde_json = { version = "1", features = ["preserve_order"] }
# The govern-all multi-client writer edits Hermes' `~/.hermes/config.yaml` (YAML) alongside the two
# JSON client configs. All merge logic runs on a `serde_json::Value`; serde_yaml only (de)serializes
# the YAML file at the edges. Matches the runtime's pinned 0.9.
serde_yaml = "0.9"
# Receipt re-verification + offline license verification — the compiled "tamper-proof anchoring"
# and license-check moat. Self-contained (no cross-repo path dep on the public crate) so the
# private Console builds + ships independently; the canonical-bytes format mirrors
# crates/kriya/src/audit.rs (kept in sync via the parity test).
ed25519-dalek = "2"
sha2 = "0.10"
hex = "0.4"
# Control-plane-only deps are OPTIONAL + behind the `control-plane` feature, so a default/free
# `tauri build` links none of them (the build-artifact half of the dormancy firewall, 1.4). hmac backs
# the device-local operator-pseudonym pepper (1.8/1.9); reqwest/rustls arrive with push.rs (2.7).
hmac = { version = "0.12", optional = true }
# OS CSPRNG. Free-tier since W1-5: the Coverage Map mints its snapshot signing key
# (~/.kriya/keys/coverage.key); the control plane also uses it for the evidence key + pepper (1.8).
# Not part of the dormancy firewall (that guards egress-capable deps: reqwest/rustls). Pinned to 0.3
# to match the version already in the app's transitive tree (no new version added).
getrandom = "0.3"
# The mTLS push client (2.7). Optional + feature-gated, so the FREE build links no reqwest/rustls.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"], optional = true }
# The org policy key's PRIVATE half (P3 org_policy_keygen) — the OS-native credential store on every
# platform we ship (macOS Keychain / Windows Credential Manager / Linux Secret Service), never a file
# on disk. Optional + feature-gated (fleet-console authoring is control-plane-only), so the free build
# links none of it.
keyring = { version = "3", optional = true, features = ["apple-native", "windows-native", "sync-secret-service"] }

[features]
# Custom protocol is the default Tauri runtime; this mirrors the scaffolder's default.
custom-protocol = ["tauri/custom-protocol"]
# Enables building the dev-only `issue-license` binary. Off by default so it never ships.
dev-issuer = []
# The on-prem control plane (Phase 1+). OFF by default: gates the device modules
# (enrollment/redact/envelope/compiler/push) + their deps, so the free tier compiles none of it
# (build-time half of the dormancy firewall; the runtime gate is enrollment::control_plane_active).
# (getrandom left this list with W1-5 — the free-tier Coverage Map needs the CSPRNG too.)
control-plane = ["dep:hmac", "dep:reqwest", "dep:keyring"]

[dev-dependencies]
# For the redaction-manifest gate (1.12) + the device e2e (1.19): sign receipts, re-verify envelopes,
# inspect bytes. (Dev-only — does not affect the shipped/free dependency graph.)
ed25519-dalek = "2"
hex = "0.4"
serde_json = "1"
kriya-verify = { path = "crates/kriya-verify" }
