[package]
name = "kriya-aggregator"
version = "0.1.0"
description = "kriyad — the customer-controlled, single-tenant SQLite aggregator: ingests signed AttestationEnvelopes over mTLS, re-verifies them offline, stores only signed metadata, and serves trustless read-back + coverage. No outbound calls; no kriya-cloud dependency."
edition = "2021"
rust-version = "1.77"
publish = false

[[bin]]
name = "kriyad"
path = "src/main.rs"

[dependencies]
# The SAME verifier the device + auditor link — the server re-verifies, it never trusts the device.
kriya-verify = { path = "../kriya-verify" }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
