[package]
name = "kriya-aggregator"
version = "0.1.0"
description = "kriyad — the customer-controlled, single-tenant SQLite aggregator: ingests signed AttestationEnvelopes over mTLS, re-verifies them offline, stores only signed metadata, and serves trustless read-back + coverage. No outbound calls; no kriya-cloud dependency."
edition = "2021"
rust-version = "1.77"
publish = false

[[bin]]
name = "kriyad"
path = "src/main.rs"

[dependencies]
# The SAME verifier the device + auditor link — the server re-verifies, it never trusts the device.
kriya-verify = { path = "../kriya-verify" }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Bundled SQLite — the whole store is one file; zero runtime deps (the BOX skin).
rusqlite = { version = "0.32", features = ["bundled"] }
# mTLS: the customer's own CA pins both ends. rustls + axum-server (provider installed at startup).
rustls = "0.23"
rustls-pemfile = "2"
axum-server = { version = "0.7", features = ["tls-rustls"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
# Sign a heartbeat in the ingest tests (the device side is not linked here).
ed25519-dalek = "2"
hex = "0.4"
