[package]
name = "kriya-verify"
version = "0.1.0"
description = "Shared, Tauri-free trust core for the kriya control plane: receipt/envelope/license verification, canonical JSON, the SHA-256 hash-chain, and the RFC-6962 Merkle tree."
edition = "2021"
rust-version = "1.77"
publish = false

[dependencies]
# The trust-core primitives — the SAME versions the Console app already pins, so the canonical bytes
# stay byte-identical (the parity tests are the spine). No Tauri here: this crate is linked by the
# headless kriyad server and the auditor CLI too.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = "2"
sha2 = "0.10"
hex = "0.4"
